--- a/pom.xml
+++ b/pom.xml
@@ -32,4 +32,44 @@
 	</dependency>
   </dependencies>
 
+  <build>
+	 <plugins>
+		<plugin>
+		  <groupId>org.apache.maven.plugins</groupId>
+		  <artifactId>maven-plugin-plugin</artifactId>
+		  <version>3.4</version>
+		  <configuration>
+		    <goalPrefix>azure-relay</goalPrefix>
+		    <skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
+		    <descriptorRefs>
+	          <descriptorRef>jar-with-dependencies</descriptorRef>
+	        </descriptorRefs>
+		  </configuration>
+		  <executions>
+			<execution>
+				<id>mojo-descriptor</id>
+				<goals>
+					<goal>descriptor</goal>
+				</goals>
+			</execution>
+		  </executions>
+		</plugin>
+      <plugin>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>single</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <descriptorRefs>
+            <descriptorRef>jar-with-dependencies</descriptorRef>
+          </descriptorRefs>
+        </configuration>
+      </plugin>
+	</plugins>
+  </build>
 </project>
