--- a/pom.xml
+++ b/pom.xml
@@ -26,9 +26,20 @@
 	    <version>${jetty.version}</version>
 	</dependency>
 	<dependency>
+	    <groupId>org.eclipse.jetty</groupId>
+	    <artifactId>jetty-util</artifactId>
+	    <version>${jetty.version}</version>
+	</dependency>
+	<dependency>
 	    <groupId>org.json</groupId>
 	    <artifactId>json</artifactId>
 	    <version>20180813</version>
+	</dependency>
+	<dependency>
+	    <groupId>junit</groupId>
+	    <artifactId>junit</artifactId>
+	    <version>4.12</version>
+	    <scope>test</scope>
 	</dependency>
   </dependencies>
 
