--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-# Compiled class file
-*.class
+# Compiled files
+/target/*
 
 # Log file
 *.log
@@ -18,6 +18,10 @@
 *.zip
 *.tar.gz
 *.rar
+
+# Ecelipse preferences #
+/.settings/*
+*.project
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
