--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Compiled files
 /target/*
+/bin/*
 
 # Log file
 *.log
@@ -25,4 +26,3 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-/target/
