--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
     <jetty.version>9.4.12.v20180830</jetty.version>
     <maven.compiler.target>1.8</maven.compiler.target>
     <maven.compiler.source>1.8</maven.compiler.source>
+    <slf4j-version>1.7.0</slf4j-version>
+    <log4j-version>1.2.17</log4j-version>
   </properties>
 
   <dependencies>
@@ -42,6 +44,21 @@
 		<groupId>javax</groupId>
 		<artifactId>javaee-api</artifactId>
 		<version>7.0</version>
+	</dependency>
+	<dependency>
+	    <groupId>log4j</groupId>
+	    <artifactId>log4j</artifactId>
+	    <version>${log4j-version}</version>
+	</dependency>
+	<dependency>
+ 	    <groupId>org.slf4j</groupId> 
+ 	    <artifactId>slf4j-api</artifactId> 
+ 	    <version>${slf4j-version}</version>
+  	</dependency>
+	<dependency>
+	    <groupId>org.slf4j</groupId>
+	    <artifactId>slf4j-simple</artifactId>
+	    <version>${slf4j-version}</version>
 	</dependency>
   </dependencies>
 
