--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.microsoft.azure</groupId>
   <artifactId>azure-relay</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.0.1-PREVIEW</version>
   <packaging>maven-plugin</packaging>
   <name>azure-relay</name>
   <url>https://github.com/Azure/azure-relay-java</url>
@@ -79,22 +79,6 @@
 			</execution>
 		  </executions>
 		</plugin>
-      <plugin>
-        <artifactId>maven-assembly-plugin</artifactId>
-        <executions>
-          <execution>
-            <phase>package</phase>
-            <goals>
-              <goal>single</goal>
-            </goals>
-          </execution>
-        </executions>
-        <configuration>
-          <descriptorRefs>
-            <descriptorRef>jar-with-dependencies</descriptorRef>
-          </descriptorRefs>
-        </configuration>
-      </plugin>
 	</plugins>
   </build>
 </project>
