--- a/pom.xml
+++ b/pom.xml
@@ -1,79 +1,100 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.microsoft.azure</groupId>
-  <artifactId>azure-relay</artifactId>
-  <version>0.0.1-PREVIEW</version>
-  <packaging>maven-plugin</packaging>
-  <name>azure-relay</name>
-  <url>https://github.com/Azure/azure-relay-java</url>
+	<groupId>com.microsoft.azure</groupId>
+	<artifactId>azure-relay</artifactId>
+	<version>0.0.1-PREVIEW</version>
+	<packaging>pom</packaging>
+	<name>azure-relay</name>
+	<description>Java library for Azure Relay</description>
+	<url>https://github.com/Azure/azure-relay-java</url>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <jetty.version>9.4.12.v20180830</jetty.version>
-    <maven.compiler.target>1.8</maven.compiler.target>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <slf4j-version>1.7.0</slf4j-version>
-    <log4j-version>1.2.17</log4j-version>
-  </properties>
+	<licenses>
+		<license>
+			<name>The MIT License (MIT)</name>
+			<url>http://opensource.org/licenses/MIT</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
+	<scm>
+		<url>scm:git:https://github.com/Azure/azure-relay-java</url>
+		<connection>scm:git:git@github.com:Azure/azure-relay-java.git</connection>
+		<tag>HEAD</tag>
+	</scm>
+	<developers>
+		<developer>
+			<id>microsoft</id>
+			<name>Microsoft</name>
+		</developer>
+	</developers>
 
-  <dependencies>
-	<dependency>
-	    <groupId>org.eclipse.jetty.websocket</groupId>
-	    <artifactId>javax-websocket-client-impl</artifactId>
-	    <version>${jetty.version}</version>
-	</dependency>
-	<dependency>
-	    <groupId>org.eclipse.jetty</groupId>
-	    <artifactId>jetty-util</artifactId>
-	    <version>${jetty.version}</version>
-	</dependency>
-	<dependency>
-	    <groupId>org.json</groupId>
-	    <artifactId>json</artifactId>
-	    <version>20180813</version>
-	</dependency>
-	<dependency>
-	    <groupId>junit</groupId>
-	    <artifactId>junit</artifactId>
-	    <version>4.12</version>
-	    <scope>test</scope>
-	</dependency>
-	<dependency>
-		<groupId>javax</groupId>
-		<artifactId>javaee-api</artifactId>
-		<version>7.0</version>
-	</dependency>
-	<dependency>
- 	    <groupId>org.slf4j</groupId> 
- 	    <artifactId>slf4j-api</artifactId> 
- 	    <version>${slf4j-version}</version>
-  	</dependency>
-  </dependencies>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<jetty.version>9.4.12.v20180830</jetty.version>
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<slf4j-version>1.7.0</slf4j-version>
+		<log4j-version>1.2.17</log4j-version>
+	</properties>
 
-  <build>
-	 <plugins>
-		<plugin>
-		  <groupId>org.apache.maven.plugins</groupId>
-		  <artifactId>maven-plugin-plugin</artifactId>
-		  <version>3.4</version>
-		  <configuration>
-		    <goalPrefix>azure-relay</goalPrefix>
-		    <skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
-		    <descriptorRefs>
-	          <descriptorRef>jar-with-dependencies</descriptorRef>
-	        </descriptorRefs>
-		  </configuration>
-		  <executions>
-			<execution>
-				<id>mojo-descriptor</id>
-				<goals>
-					<goal>descriptor</goal>
-				</goals>
-			</execution>
-		  </executions>
-		</plugin>
-	</plugins>
-  </build>
+	<dependencies>
+		<dependency>
+			<groupId>org.eclipse.jetty.websocket</groupId>
+			<artifactId>javax-websocket-client-impl</artifactId>
+			<version>${jetty.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.jetty</groupId>
+			<artifactId>jetty-util</artifactId>
+			<version>${jetty.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20180813</version>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>javax</groupId>
+			<artifactId>javaee-api</artifactId>
+			<version>7.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>${slf4j-version}</version>
+		</dependency>
+	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-plugin-plugin</artifactId>
+				<version>3.4</version>
+				<configuration>
+					<goalPrefix>azure-relay</goalPrefix>
+					<skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
+				</configuration>
+				<executions>
+					<execution>
+						<id>mojo-descriptor</id>
+						<goals>
+							<goal>descriptor</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
