--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<azure.identity.version>1.4.0</azure.identity.version>
 		<jetty.version>9.4.12.v20180830</jetty.version>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<maven.compiler.source>1.8</maven.compiler.source>
@@ -39,6 +40,11 @@
 	</properties>
 
 	<dependencies>
+        <dependency>
+		    <groupId>com.azure</groupId>
+		    <artifactId>azure-identity</artifactId>
+		    <version>${azure.identity.version}</version>
+	    </dependency>
 		<dependency>
 			<groupId>org.eclipse.jetty.websocket</groupId>
 			<artifactId>javax-websocket-client-impl</artifactId>
